investor page button alignment issue fix

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -181,6 +181,7 @@ a.sub-child {
     font-family: $jmMediumFont;
     font-weight: normal;
     display: flex;
+    align-items: center;
   }
   .jmprdt__btn {
     display: flex;
@@ -197,6 +198,8 @@ a.sub-child {
   width: 24px;
   height: 24px;
   margin-left: 10px;
+  background-image: url("data:image/svg+xml,%3Csvg id='arrow_forward-blue-48dp' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath id='Path_5802' data-name='Path 5802' d='M0,0H24V24H0Z' fill='none'/%3E%3Cpath id='Path_5803' data-name='Path 5803' d='M12,4,10.59,5.41,16.17,11H4v2H16.17l-5.58,5.59L12,20l8-8Z' fill='%23fff'/%3E%3C/svg%3E%0A");
+  background-size: cover;
 }
 #jmLogoWhite {
   background: url(../images/new__jm__images/JMLogoWhite.svg) 0 0 no-repeat
