--- a/scss/_hero-panel.scss
+++ b/scss/_hero-panel.scss
@@ -17,4 +17,15 @@
 		text-shadow: $jmTextShadow1;
 		@include generateFont($jmMediumFont, 24px, 28px, $jmWhiteColor, 0.8);
 	}
+	.panel__btnlist{
+		display: flex;
+		flex-direction: column;
+		width: auto;
+		min-width: 320px;
+		max-width: 410px;
+	}
+	.panel__btn{
+		margin-top: 30px;
+		margin-bottom: 10px;
+	}
 }
