--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -26,10 +26,6 @@
     width: 100%
   }
 }
-.jmpanels--hero-temp .panel__btn{
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
 .product__cont {
   a, a:hover{
     text-decoration: none !important;
